feat: implement core domain services and entities for student enrollment, academic records, and system configuration management